style/main.css
@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');

/*url('webfont.svg#svgFontName') format('svg');*/

@media all and (max-device-width: 700px) ,(max-width: 700px ) {
    nav {
        display: none;
    }


}

html {
    box-sizing: border-box; /*now box size includes the padding and border*/
    font-size: 100%;

}

*, *:before, *:after {
    box-sizing: inherit;
}

body {
    font-family: 'Raleway', 'Source Sans Pro', sans-serif;
    font-weight: 300;
    padding-top: 66px;
}

li {
    list-style-type: none;
}

a {
    text-decoration: none;
}

.reset_list {
    list-style: none;
    margin: 0;
    padding: 0;
}

.main_header{
    padding: 0px 20px;
    height: 66px;
    width: 100%;
    position: fixed;
    top:0;
    z-index: 1;
    background-color: #fff;
    text-align: right;

}

.comigo_logo_header{
    position: absolute;
    top:0;
    bottom: 0;
    left:20px;
    margin: auto;
}



/****** navigation ******/

.main_nav{
    font-size: 1.125em;
    display: inline-block;
}

.main_nav > u{
    display: inline-block;
}

.main_nav a {
    text-align: center;
    color: #3d3d3d;
    outline: 0;
    line-height: 66px;
    padding: 0.6em;
}


/*First level items  */
.main_nav > ul > li{
    display: inline-block;
}

.main_nav > ul{
    margin: 0;
}

.main_nav > ul > li > a:hover, .main_nav > ul > li > a:focus {
    color: #f14848;
}

/* second and third level items*/
.main_nav ul ul li {
    display: inline-block;
}



.main_nav ul ul a:hover, nav ul ul a:focus {
    color: white;
    background-color: #f14848;
}

.main_nav ul ul a {
    line-height: 3;
    font-size: 3.125rem;
    font-weight: 100;
}

/*@@@@*/


.our_solution_menu {
    position: absolute;
    display: none;
    top: 100%;
    left: 0;
    width: 100%;
    height: 207px;
    z-index: 1;
    padding: 0;

}

.insight_menu {
    position: absolute;
    display: none;
    top: 100%;
    left: 0;
    width: 100%;
    height: 207px;
    z-index: 1;
    padding: 0;

}


.insights_item:hover .insight_menu {
    display: inline-block;
}

.our_solution_item:hover .our_solution_menu {
    display: inline-block;
}

.insight_menu > li{
    width: 33.333%;
    height: 207px;
    background-color: white;
}

.our_solution_menu > li{
    width: 33.333%;
    height: 207px;
    background-color: white;
}

.main_nav ul ul a {
    display: inline-block;
    height: 100%;
    width: 100%;
    vertical-align: bottom;
}


.our_solution_menu > li > a{
    line-height: 100%;
    vertical-align: middle;

}

.two_line_link{
    padding: 0;
}
.two_line_link .span_two_line{
    line-height: 1;
    display: inline-block;
    vertical-align: middle;
    margin: auto;

}
/*Sub menu*/

.sub_menu_2_items{
    position: absolute;
    display: none;
    top: 100%;
    left: 0;
    width: 100%;
    height: 207px;
    z-index: 1;
    padding: 0;
}

.sub_menu_2_items > li{
    width: 50%;
    height: 207px;
    background-color: white;
}

.ei_cloud_item:hover .sub_menu_ei_cloud {
    display: inline-block;
}

.ei_middleware_item:hover .sub_menu_ei_middleware {
    display: inline-block;
}


.gone{
    display: none;
}


/*navigation*/
.sub-footer {
    background-color: #151515;
}

footer a {
    color: white;
}

.red_button {
    background-color: #f14848;
    color: white;
}

.white_button {
    background-color: white;
    color: #f14848;;
}

/*SECTIONS*/
section {
    overflow: hidden;
    height: 600px;
    width: auto;
    color: #3d3d3d;
}

.blocked_element {
    display: block;
}

.rounded_button {
    border-radius: 2em;
    display: inline-block;
    padding: 0px 40px;
    line-height: 3.5em;
    letter-spacing: 0.2em;
}

.margin_less {
    margin: 0px;
}

/*First Section*/
.schedule_a_demo_section {
    height: 42.5vw;
    background: url("../assets/main-bg/home-brain-image-new-1920x816.png"), url("../assets/main-bg/home-featured-bg.png");
    background-size: contain, auto;
    background-repeat: no-repeat;
    color: white;
    font-size: 1.125rem;
    text-align: center;
    padding: 12% 22%;

}

.schedule_a_demo_header {
    font-size: 4.5rem;
    margin-bottom: 50px;
    font-weight: normal;
}

/*Second section*/

.why_comigo_section {
    height: 29.16666667vw;
    text-align: center;
    font-size: 1.25em;
    /*font-family: Texta, ProximaNova, Tahoma, sans-serif;*/
    padding: 7%;
}

.why_comigo_header {
    margin-bottom: 20px;
    font-size: 3.9rem;
    font-weight: inherit;
}

.why_comigo_subtitle {
    margin-bottom: 30px;
    font-size: 1.125em;
    color: #3d3d3d;
    font-weight: 100;
    line-height: 1.4em;
}

.why_comigo_button {
    font-size: 0.8rem;
}

.why_comigo_block {
    width: 450px;
}

.centered_block {
    margin: 0 auto;
}

/*Third Section*/
.services_section {
    height: 40vw;
    position: relative;
    font-weight: 300;
    color: white;
}

.service_headers{
    width: 33.3333%;
    display: inline-block;
    vertical-align: top;
    background-color: #515151;
    height: 100%;
    font-size: 1.5rem;
    padding-top: 8vw ;
    padding-right: 7.5em;
    padding-left: 7.5em;
    font-weight: 100;
}

.service_main_header{
    font-weight: 300;
    margin: 0;
    text-align: right;
}

.service_figure{
    position: absolute;
    top: 8vw;
    right: 12%;
    display: none;
    text-align: center;
}

.feature_title{
    color: #969696;
    font-size: 1.5rem;
    font-weight: 300;
}

.default_figure{
    display: block;
}

.service_list_container figcaption{
    font-weight: 100;
    font-size: 1.57rem;
    width: 17em;
    padding-bottom: 1em;
}

.service_list_container li:first-of-type h3{
    margin-top: 0;
}

.services_video {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
    vertical-align: top;
    background-color: #515151;
    height: 100%;
}


.service_list_container{
    width: 64.66666%;
    display: inline-block;
    padding-top: 8vw ;
}


.feature_title:hover {
    color: #f14848;
}

.feature_title:hover ~ .feature_title{
    display: none;
}

.feature_title:hover + .service_figure{
    display: inline-block;
}

.feature_headers_container{
    width: 10em;
}
.service_list_container li{
    display: inline-block;
}

li:hover ~ li .default_figure{
    display: none;
}


.feature_title{
    display: inline-block;
}

/*forth Section*/
.enhance_service_section {
    display: inline-block;
    background-image: url("../assets/other/home-tv-service-bg1.png");
    background-size: contain;
    color: white;
    font-size: 0.9rem;
    text-align: center;
    height: 41.75365344vw;
    width: 50%;

}

.enhance_section_content {
    display: inline-block;
    text-align: left;
    width: 50%;
}

.enhance_sub_title{
    font-size: 1.4rem;
}

.enhance_title {
    font-size: 3.5rem;
    font-weight: 300;
    text-align: left;
    width: 8em;
}

.enhance_button {
    font-size: 1.12rem;
}

.enhance_img {
    text-align: left;
    display: block;
    margin: 0 auto;
    margin-top: 65px;

}

/*fifth Section*/
.deploy_section {
    display: inline-block;
    font-size: 0.9rem;
    background-image: url("../assets/other/home-tv-service-bg2.png");
    background-size: contain;
    padding: 4%;
    height: 41.75365344vw;
    width: 50%;
    padding-top: 2px;
}

.deploy_header {
    font-size: 3.5rem;
    font-weight: 300;
}

.deploy_button {
    font-size: 1.12rem;
}

.deploy_sub_title{
    font-size: 1.4rem;
}

.deploy_img{
    margin-top: 18px;

}



/*sixth Section*/
.whos_on_section {
    height: 49.02777778vw;
    padding: 3% 0;
    vertical-align: top;
    position: relative;
}

.whos_on_text_content {
    width: 40%;
    padding: 5% 10%;
    display: inline-block;
    vertical-align: top;
}

.whos_on_title {
    font-size: 3.25rem;
    margin: 0;
    font-weight: 300;
    vertical-align: middle;
}

.whos_on_sub_title {
    font-size: 1.125rem;

}

.whos_on_button {
    font-size: 1.12rem;
}

.whos_on_img {
    position: absolute;
    right: -40px;
    display: inline-block;
    width: 60%;
    height: auto;
}

/*seventh Section*/
.learn_more_section {
    height: 1000px;
    background-color: #ffff00;
}

.learn_more_download {
    background-color: red;
}

.learn_more_demo {
    background-image: url("../assets/other/screen_demo.jpg");
    background-repeat: no-repeat;
}

.learn_more_meeting {
    background-image: url("../assets/other/screen_demo.jpg");
    background-repeat: no-repeat;
}

.learn_more_social {
}

/*egith Section*/
.blog_section {
    background-color: #353535;
    color: white;
    height: 36.11111111vw;
    vertical-align: top;
}

.blog_u_list {
    display: inline-block;
    vertical-align: top;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 83.3333335%;
}

.blog_main_title{
    font-weight: 300;
    font-size: 5.1rem;
    margin-bottom: 0;
}

.blog_header_font_style{
    font-size: 1.2rem;
}

.blog_header {
    position: relative;
    display: inline-block;
    width: 16.6666667%;
    height: 100%;
    padding: 20px;
    vertical-align: top;
    background-color: #f14848;
}

.blog_header_pos_bottom{
    position: absolute;
    bottom: 11px;
}

.blog_item {
    vertical-align: top;
    width: 16.6666667vw;
    display: inline-block;
    height: 100%;
    overflow: hidden;
    position: relative;
    background: no-repeat 50% 20%;
    background-size: cover;
}

.blog_link {
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    color: white;
    bottom: 0px;
    padding: 6px;
    font-size: 1.2rem;
}

.blog_read_more_button{
    display: block;
    position: absolute;
    top: 100%;
    width: 100%;
    text-align: center;
    line-height: 4em;
    background-color: #f14848;
}

.blog_link_title{
    position: absolute;
    bottom: 6px;
}

.link1 {
    background-image: url("../assets/blog/ibc_post_EI-750x508.png");
}

.link2 {
    background-image: url("../assets/blog/IMG_9294-750x563.jpeg");

}

.link3 {
    background-image: url("../assets/blog/Image-Blog-Yoav_356121362-copy-750x563.jpg");
}

.link4 {
    background-image: url("../assets/blog/post_tv_connect-750x508.jpeg");
}

.link5 {
    background-image: url("../assets/blog/post_quality-750x508.jpeg");
}

/*****  FOOTER *****/


footer {
    background-color: #1e2024;
    height: 437px;
    position: relative;



}

.footer_nav_list{

    vertical-align: top;
}

.footer_nav_list  li{
    display: inline-block;
    padding: 20px 0px;
    display: block;
}

.footer_nav_list  ul{
    display: inline-block;
}

.footer_nav_list ul li, .footer_nav_list ul li a  {
    color: #7a7a7a;
    outline: 0;
    padding:0;
    padding-top: 20px;
    font-size: 1rem;
}

.footer_nav_list{
    font-size: 1.125rem;
    padding: 0;
    display: inline-block;
    width: 66.6666%;
    height: 400px ;
    margin: 0;
    padding-top: 68px;
    margin-left: 223px;
}

footer ul ul a:hover, footer ul ul a:focus {
    color: #f14848;
}

.footer_nav_list ul{
    padding: 0;
    display: block;
}


/*.sub-footer a:hover, .sub-footer a:focus {*/
    /*color: white;*/
/*}*/


.footer_section1{
    width: 33.333%;
    height: 100%;
    vertical-align: top;
    display: inline-block;
}

.footer_section2{
    width: 33.333%;
    height: 100%;
    vertical-align: top;
    display: inline-block;
}

.footer_section3{
    width: 33.333%;
    height: 100%;
    vertical-align: top;
    display: inline-block;
}

.footer_image_logo{
    margin-top: 93px;
}
.sub-footer{
    padding-left: 223px;
    position: absolute;
    bottom: 0;
    height: 66px;
    width: 100%;
    font-size: 0.87rem  ;
    color: #636363;
    text-align: justify;
    vertical-align: middle;
}
.sub-footer a {
    outline: 0;
    color: #636363;
}

.sub_footer_token{
    padding: 0 1.5em;
}

.sub_footer_token_first{
    padding-right: 1.5em;
}

.footer_social_list{
    display: inline-block;
}
.footer_social_list li{
    display: inline-block;

}

.sub_footer_component{

}

